# socket-programming

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake.yml  codeql-analysis.yml
src/: CMakeLists.txt  config.h  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
src/tcp/: tcp_client.c  tcp_server.c
src/udp/: udp_client.c  udp_server.c
