cmake_minimum_required(VERSION 3.0)
project(socket_programming)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(OUTPUT_FILENAME_SUFFIX ${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})

add_subdirectory(src)
